--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
-
-    
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login</title>
+        <title>Dashboard</title>
         <link rel="stylesheet" href="stylesheet/style.css">
         <link rel="stylesheet" href="stylesheet/bootstrap.css">
         <link rel="stylesheet" href="stylesheet/icon.css">
@@ -48,44 +46,7 @@
                                 </div>
                             </div>
 
-                            <div class="dropdown d-none d-sm-inline-block">
-                                <button type="button" class="btn header-item waves-effect" data-bs-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="false">
-                                    <img class="" src="images/flags/us.jpg" alt="Header Language" height="16">
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-end">
-
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="images/flags/spain.jpg" alt="user-image" class="me-1" height="12"> <span
-                                            class="align-middle">Spanish</span>
-                                    </a>
-
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="images/flags/germany.jpg" alt="user-image" class="me-1" height="12"> <span
-                                            class="align-middle">German</span>
-                                    </a>
-
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="images/flags/italy.jpg" alt="user-image" class="me-1" height="12"> <span
-                                            class="align-middle">Italian</span>
-                                    </a>
-
-                                    <!-- item-->
-                                    <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                        <img src="images/flags/russia.jpg" alt="user-image" class="me-1" height="12"> <span
-                                            class="align-middle">Russian</span>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="dropdown d-none d-lg-inline-block ms-1">
-                                <button type="button" class="btn header-item noti-icon waves-effect" data-toggle="fullscreen">
-                                    <i class="mdi mdi-fullscreen"></i>
-                                </button>
-                            </div>
+                           
 
                             <div class="dropdown d-inline-block">
                                 <button type="button" class="btn header-item noti-icon waves-effect"
@@ -180,8 +141,8 @@
                                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     <img class="rounded-circle header-profile-user" src="images/users/avatar-2.jpg"
                                         alt="Header Avatar">
-                                    <span class="d-none d-xl-inline-block ms-1">Patrick</span>
-                                    <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
+                                    <span class="d-none d-xl-inline-block ms-1">Adminstrator</span>
+                                    <i class=" d-none d-xl-inline-block"></i>
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-end">
                                     <!-- item-->
@@ -254,8 +215,8 @@
 
             <div class="mt-3">
 
-                <a href="#" class="text-dark fw-medium font-size-16">Patrick Becker</a>
-                <p class="text-body mt-1 mb-0 font-size-13">UI/UX Designer</p>
+                <a href="#" class="text-dark fw-medium font-size-16">Adminstrator</a>
+
 
             </div>
         </div>
@@ -267,159 +228,117 @@
                 <li class="menu-title">Menu</li>
 
                 <li>
-                    <a href="javascript: void(0);" class="waves-effect">
-                        <i class="mdi mdi-airplay"></i><span class="badge rounded-pill bg-info float-end">2</span>
+                    <a href="javascript: void(0);" class="waves-effect has-arrow ">
+                        <i class="mdi mdi-airplay "></i>
                         <span>Dashboard</span>
                     </a>
-                  
-                </li>
-
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-flip-horizontal"></i>
-                        <span>Layouts</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="true">
-                        <li><a href="javascript: void(0);" class="has-arrow">Vertical</a>
-                            <ul class="sub-menu" aria-expanded="true">
-                                <li><a href="layouts-compact-sidebar.html">Compact Sidebar</a></li>
-                                <li><a href="layouts-icon-sidebar.html">Icon Sidebar</a></li>
-                                <li><a href="layouts-boxed.html">Boxed Layout</a></li>
-                                <li><a href="layouts-preloader.html">Preloader</a></li>
-                            </ul>
-                        </li>
-
-                        <li><a href="javascript: void(0);" class="has-arrow">Horizontal</a>
-                            <ul class="sub-menu" aria-expanded="true">
-                                <li><a href="layouts-horizontal.html">Horizontal</a></li>
-                                <li><a href="layouts-hori-topbarlight.html">Topbar Light</a></li>
-                                <li><a href="layouts-hori-boxed.html">Boxed Layout</a></li>
-                                <li><a href="layouts-hori-preloader.html">Preloader</a></li>
-                            </ul>
-                        </li>
+                    <ul class="sub-menu" aria-expanded="false">
+                        <li><a href="#">Notifications</a></li>
+                        <li><a href="#">Company Announcements</a></li>
                     </ul>
-
                 </li>
 
                 <li>
-                    <a href="calendar.html" class=" waves-effect">
-                        <i class="mdi mdi-calendar-text"></i>
-                        <span>Calendar</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
+                    <a href="javascript: void(0);" class=" waves-effect">
                         <i class="mdi mdi-inbox-full"></i>
-                        <span>Email</span>
+                        <span>360 Degree</span>
                     </a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="email-inbox.html">Inbox</a></li>
-                        <li><a href="email-read.html">Read Email</a></li>
-                    </ul>
+                   
                 </li>
+
 
                 <li>
                     <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-calendar-check"></i>
-                        <span>Tasks</span>
+                        <i class="mdi mdi-calendar-text"></i>
+                        <span>My Details</span>
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="tasks-list.html">Task List</a></li>
-                        <li><a href="tasks-kanban.html">Kanban Board</a></li>
-                        <li><a href="tasks-create.html">Create Task</a></li>
+                        <li><a href="#">Dealer Contact</a></li>
+                        <li><a href="#">Customers</a></li>
+                        <li><a href="#">My Service Request</a></li>
                     </ul>
                 </li>
 
-               
-
-                
+                <li>
+                    <a href="javascript: void(0);" class="waves-effect has-arrow">
+                        <i class="mdi mdi-inbox-full"></i>
+                        <span>Orders</span>
+                    </a>
+                    <ul class="sub-menu" aria-expanded="false">
+                        <li><a href="#">Orders Status</a></li>
+                        <li><a href="#">Stock Report</a></li>
+                        <li><a href="#">Sales Order</a></li>
+                        <li><a href="#">Create Order</a></li>
+                        <li><a href="#">Favourite List</a></li>
+                        <li><a href="#">Return Order</a></li>
+                        <li><a href="#">Dispatch Details</a></li>
+                    </ul>
+                </li>
 
                 <li>
-                    <a href="javascript: void(0);" class="waves-effect">
+                    <a href="javascript: void(0);" class="waves-effect has-arrow">
+                        <i class="mdi mdi-calendar-check"></i>
+                        <span>Financials</span>
+                    </a>
+                    <ul class="sub-menu" aria-expanded="false">
+                        <li><a href="#">Account Statements</a></li>
+                        <li><a href="#">Cash Discount</a></li>
+                        <li><a href="#">Balance Confirmation</a></li>
+                        <li><a href="#">Outstanding</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="javascript: void(0);" class="waves-effect has-arrow">
+                        <i class="mdi mdi-account-circle-outline"></i>
+                        <span>Achievements</span>
+                        
+                    </a>
+                    <ul class="sub-menu" aria-expanded="false">
+                        <li><a href="#">MTD</a></li>
+                        <li><a href="#">QTD</a></li>
+                        <li><a href="#">YTD</a></li>
+                        <li><a href="#">Geographical Sales</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="javascript: void(0);" class="waves-effect has-arrow">
+                        <i class="mdi mdi-checkbox-multiple-blank-outline"></i>
+                        <span>Beat Management</span>
+                    </a>
+                    <ul class="sub-menu" aria-expanded="false">
+                        <li><a href="#">Status Master</a></li>
+                        <li><a href="#">Task Master</a></li>
+                        <li><a href="#">Beat Master</a></li>
+                        <li><a href="#">Route Plan</a></li>
+                        <li><a href="#">Daily Sales Book</a></li>
+                        <li><a href="#">Daily Sales Report</a></li>
+                        <li><a href="#">Dealer Check-In</a></li>
+                        <li><a href="#">Check-In Report</a></li>
+                        <li><a href="#">Expense Create</a></li>
+                        <li><a href="#">Expense Change</a></li>
+                        <li><a href="#">Expense Report</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="javascript: void(0);" class="waves-effect has-arrow">
                         <i class="mdi mdi-newspaper"></i>
                         <span class="badge rounded-pill bg-danger float-end">6</span>
-                        <span>Forms</span>
+                        <span>Product Catelog</span>
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="form-elements.html">Form Elements</a></li>
-                        <li><a href="form-validation.html">Form Validation</a></li>
-                        <li><a href="form-advanced.html">Form Advanced</a></li>
-                        <li><a href="form-editors.html">Form Editors</a></li>
-                        <li><a href="form-uploads.html">Form File Upload</a></li>
-                        <li><a href="form-xeditable.html">Form Xeditable</a></li>
-                        <li><a href="form-repeater.html">Form Repeater</a></li>
-                        <li><a href="form-wizard.html">Form Wizard</a></li>
-                        <li><a href="form-mask.html">Form Mask</a></li>
+                        <li><a href="#">Product Price & List</a></li>
+                       
                     </ul>
                 </li>
 
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-clipboard-list-outline"></i>
-                        <span>Tables</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="tables-basic.html">Basic Tables</a></li>
-                        <li><a href="tables-datatable.html">Data Tables</a></li>
-                        <li><a href="tables-responsive.html">Responsive Table</a></li>
-                        <li><a href="tables-editable.html">Editable Table</a></li>
-                    </ul>
-                </li>
+              
 
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-chart-donut"></i>
-                        <span>Charts</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="charts-apex.html">Apex charts</a></li>
-                        <li><a href="charts-chartjs.html">Chartjs Chart</a></li>
-                        <li><a href="charts-flot.html">Flot Chart</a></li>
-                        <li><a href="charts-knob.html">Jquery Knob Chart</a></li>
-                        <li><a href="charts-sparkline.html">Sparkline Chart</a></li>
-                    </ul>
-                </li>
 
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-emoticon-happy-outline"></i>
-                        <span>Icons</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="icons-boxicons.html">Boxicons</a></li>
-                        <li><a href="icons-materialdesign.html">Material Design</a></li>
-                        <li><a href="icons-dripicons.html">Dripicons</a></li>
-                        <li><a href="icons-fontawesome.html">Font awesome</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-map-marker-outline"></i>
-                        <span>Maps</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="maps-google.html">Google Maps</a></li>
-                        <li><a href="maps-vector.html">Vector Maps</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="javascript: void(0);" class="has-arrow waves-effect">
-                        <i class="mdi mdi-file-tree"></i>
-                        <span>Multi Level</span>
-                    </a>
-                    <ul class="sub-menu" aria-expanded="true">
-                        <li><a href="javascript: void(0);">Level 1.1</a></li>
-                        <li><a href="javascript: void(0);" class="has-arrow">Level 1.2</a>
-                            <ul class="sub-menu" aria-expanded="true">
-                                <li><a href="javascript: void(0);">Level 2.1</a></li>
-                                <li><a href="javascript: void(0);">Level 2.2</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+               
+               
 
             </ul>
         </div>
@@ -443,7 +362,7 @@
 
                                 <div class="page-title-right">
                                     <ol class="breadcrumb m-0">
-                                        <li class="breadcrumb-item active">Welcome to Qovex Dashboard</li>
+                                        <li class="breadcrumb-item active">Welcome to Dashboard</li>
                                     </ol>
                                 </div>
 
